# Textension

./: .gitignore  Dockerfile  README.md  docker-compose.yml  file_upload.py  install_help  makefile  pyproject.toml  requirements.txt  uwsgi.ini
app_session/: 9a4ec047-1520-11e9-a589-9a00d0c9f401-9285  ab90e1f0-4198-11e8-b410-8c8590362f8e-46557
locales/: babel.cfg
locales/fr/LC_MESSAGES/: messages.po
static/css/: rangeslider.css  style.css
static/js/: "  event.js  interact.js  linguistic.js  main.js  textensionModel.js
static/lib/: peekaboo.min.js
static/lib/capture/: capture.js
static/lib/dropzone/: dropzone.css  dropzone.js
static/py/: CAIS.py  FindMatches.py  InlineViz.py  OCR_bounding_boxes_with_confidence.py  OCR_bounding_boxes_with_confidence_OLD.py  convert_image_to_pdf.py  generate_examples.py  googleMaps.py  google_translate.py  input_text_processing.py  insertMaps.py  lineDetection.py  linguistic_tools.py  merge_images.py  ocr_pdf_with_imag_conversion_bounding_boxes.py  opacityConversion.py  patchBasedSynthesis.py  pdf_merger.py  pdf_page_splitter.py  pdf_text_extraction.py  pickle_session.py  randomizeStrip.py  serial_driver.py  textConfidence.py  text_orientation.py  textension.py  theano_test.py
static/py/Example code/: CAIS.py  SynthTexture.py  crop_morphology.py  docx_extract_text.py  nltk_tokenize_text_file.py  pymysql_example.py  synthesis.lua  tesseract_bounding_boxes.py  tesserocr_example_has_confidence.py
templates/: 404.html  500.html  base.html  index.html  index2.html  interact.html  upload.html
