[tool.poetry]
name = "textension"
version = "0.1.0"
description = ""
authors = ["Nathan Beals <nathan.beals@ontariotechu.net>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
numpy = "^1.19.1"
PyPDF2 = "^1.26.0"
Pillow = "^7.2.0"
pdfminer = "^20191125"
wand = "^0.6.2"
tesserocr = "^2.5.1"
google-api-python-client = "^1.10.0"
pandas = "^1.1.0"
spacy = "^2.3.2"
scipy = "^1.5.2"
opencv-python = "^4.3.0"
imutils = "^0.5.3"
matplotlib = "^3.3.0"
colour = "^0.1.5"
pdf2image = "^1.13.1"
pyocr = "^0.7.2"
